--- a/monkey.html
+++ b/monkey.html
@@ -19,11 +19,11 @@
 
 
 		<title> Monkey Game </title>
-		<link rel="stylesheet" type="text/css" href="Monkey_styles.css" />
+		<link rel="stylesheet" type="text/css" href="monkey_styles.css" />
 		<script src="jquery-1.8.3.min.js" type="text/javascript"></script>
 		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />	
 		<Script src="jquery-ui-1.9.2.custom.min.js" type="text/javascript"></script>
-		<script src="Scripts.js" type="text/javascript"></script>
+		<script src="scripts.js" type="text/javascript"></script>
 		
 </head>
 
@@ -60,18 +60,18 @@
 </div>
 
 
-<div   id="col2row1" class="col twoof3" >
-		<img class="display" src="cartoon_monkey.png" />			
+<div   id="col2row1" class="col twoof3 hidden" >
+		<img   src="cartoon_monkey.png" />			
 </div>
 
 
-<div   id="col3row1" class="col threeof3">
-		<img class="display" src="cartoon_monkey.png" />
+<div   id="col3row1" class="col threeof3 hidden">
+		<img  src="cartoon_monkey.png" />
 </div>
 	<!--end first row -->
 
-<div  id="col1row2" class="col oneof3">
-		<img class="display" src="cartoon_monkey.png" />
+<div  id="col1row2" class="col oneof3 hidden">
+		<img  src="cartoon_monkey.png" />
 </div>
 
 
@@ -80,31 +80,28 @@
 </div>
 
 
-<div   id="col3row2" class="col threeof3">
-		<img class="display" src="cartoon_monkey.png" />
+<div   id="col3row2" class="col threeof3 hidden">
+		<img  src="cartoon_monkey.png" />
 </div>
 	<!-- end secound row -->
 	
 
-<div  id="col1row3" class="col oneof3">
-		<img class="display" src="cartoon_monkey.png" />
+<div  id="col1row3" class="col oneof3 hidden">
+		<img  src="cartoon_monkey.png" />
 </div>
 
 
-<div   id="col2row3" class="col twoof3">
-		<img class="display" src="cartoon_monkey.png" />
+<div   id="col2row3" class="col twoof3 hidden">
+		<img  src="cartoon_monkey.png" />
 </div>
 
 
-<div   id="col3row3" class="col threeof3">
-	<img class="display" src="cartoon_monkey.png" />
+<div   id="col3row3" class="col threeof3 hidden">
+	<img  src="cartoon_monkey.png" />
 </div>
 	<!-- end third row -->
 	
 </div> <!-- end of section class -->
-
-
- 
 
 </body>
 
