--- a/monkey.html
+++ b/monkey.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<title> Monkey Game </title>
 	<link rel="stylesheet" type="text/css" href="monkey_styles.css" />
 	<script src="jquery-1.8.3.min.js" type="text/javascript"></script>
