made monkey smaller

--- a/monkey.html
+++ b/monkey.html
@@ -24,8 +24,11 @@
 		<div id="message">
 		</div>
 		<div class="section">
-			<div id="col1row1" class="col oneof3"  >
-					<img class="display" src="img/cartoon_monkey.png" />
+			<div id="col1row1" class="col oneof3 hidden">
+					<!--<img class="display" src="img/cartoon_monkey.png" />-->
+					<div id="monkey">
+						<img class="display" src="img/cartoon_monkey.png" >
+					</div>
 			</div>
 			<div id="col2row1" class="col twoof3 hidden" >
 					<img   src="img/cartoon_monkey.png" />			
